Add missing module in pom.xml

--- a/lambda/pom.xml
+++ b/lambda/pom.xml
@@ -13,6 +13,7 @@
     </properties>
 
     <modules>
+        <module>common</module>
         <module>get-all-handler</module>
         <module>get-one-handler</module>
         <module>create-handler</module>
