Add outputFile entry to maven shade plugin configuration

--- a/lambda/pom.xml
+++ b/lambda/pom.xml
@@ -28,6 +28,7 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
+                    <outputFile>${dir}\${project.artifactId}.jar</outputFile>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
                 </configuration>
                 <executions>
